<resources>
    <string name="app_name">211 Android N</string>
    <string name="contoh_input_teks_dan_button">Contoh Input Teks dan Button</string>
    <string name="isi_email">Isi Email</string>
    <string name="isi_nomor_hp">Isi Nomor HP</string>
    <string name="isi_tanggal">Isi Tanggal</string>
    <string name="isi_nama">Isi Nama</string>
    <string name="isi_angka">Isi Angka</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="no_handphone">No Handphone</string>
    <string name="tanggal">Tanggal</string>
    <string name="angka">Angka</string>
    <string name="login">LOGIN</string>
    <string name="isi_username_email">Isi username/email</string>
    <string name="password">Password</string>
    <string name="keluar">Keluar</string>
    <string name="logout">Logout Aja Deh!</string>
    <string name="tasbih">Baca Tasbih Dulu</string>
    <string name="judul">Praktikum Android N 211</string>
    <string name="logo">logo</string>
    <string name="set_target">Set target</string>
    <string name="ulang">Ulang</string>
    <string name="zero">0</string>
    <string name="tap">Tap</string>
</resources>