<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contoh_input_teks_dan_button"
        android:textSize="24sp"
        android:textColor="@color/purple_500" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/isi_nama"
        android:autofillHints="name"
        android:layout_marginBottom="8dp"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/isi_email"
        android:autofillHints="emailAddress"
        android:minHeight="48dp"
        android:layout_marginBottom="8dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/isi_nomor_hp"
        android:autofillHints="phone"
        android:minHeight="48dp"
        android:layout_marginBottom="8dp"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/isi_tanggal"
        android:autofillHints="creditCardExpirationDate"
        android:minHeight="48dp"
        android:layout_marginBottom="8dp"
        android:inputType="date" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/isi_angka"
        android:autofillHints=""
        android:minHeight="48dp"
        android:layout_marginBottom="8dp"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simpan"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/success" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batal"
            android:backgroundTint="@color/danger" />

    </LinearLayout>

</LinearLayout>